<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--
    <string name="app_name">Job</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <string name="title_log_info">登记资料</string>
     <string name="title_area1">选择地区</string>
     <string name="title_new">最新發布</string>
     <string name="title_job1">选择工种</string>
     <string name="title_reg">注册资料</string>
     <string name="title_upinfo">修改资料</string>
     <string name="title_pub">发布信息</string>
     <string name="title_belong">所属行业：</string>
     <string name="self">身份</string>
     <string name="sure">确定</string>
     <string name="change">修改</string>
     <string name="sure1">发布</string>
     <string name="radio1">求职者/服务供应商</string>
     <string name="radio2">雇主/消费者/發布者</string>
     <string name="radio3">中介</string>
     <string name="name">姓名</string>
     <string name="title">标题</string>
          <string name="content">内容</string>
     <string name="tell">电话</string>
     <string name="show">简介</string>
     <string name="show2">發布简介</string>
          <string name="show1">求职简介</string>
          <string name="show3">中介简介</string>
     <string name="area">地区</string>
          
     <string name="area1">一级地区</string>
          <string name="area2">二级地区</string>
          <string name="area3">三级地区</string>
               <string name="job1">一级工种</string>
               <string name="job2">二级工种</string>
                    <string name="job3">三级工种</string>
                    <string name="toast1">请填写用户名</string>
                    <string name="toast2">请填写电话号码</string>
                                        <string name="toast3">请填写标题</string>
                                        <string name="toast4">请填写内容</string>
                                        <string name="toast5">请填写地区</string>
                                        <string name="toast6">提交失败,请重试</string>
                                        <string name="toast7">发布成功</string>
                                        <string name="toast8">修改成功</string>
                                        <string name="toast9">修改失败</string>
                                        
                                        
                                            	<string name="xlistview_footer_hint_normal"></string>
                                        	<string name="xlistview_footer_hint_normal1">查看更多</string>
    		<string name="xlistview_header_hint_normal">下拉刷新</string>
	<string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_ready"></string>
    <string name="xlistview_footer_hint_ready1">松开载入更多</string>
    	<string name="xlistview_header_hint_ready">松开刷新数据</string>
	<string name="xlistview_header_hint_loading">正在加载…</string>
    -->

    <string name="titleMain1">發布信息</string>
    <string name="titleMain2">最新信息</string>
    <string name="titleMain3">我的資料</string>
    <string name="titleMain4">聯絡訊息</string>
    <string name="app_name">快登</string>
    <string name="loadinging">加載中...</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_log_info">登記資料</string>
    <string name="title_area1">選擇地區</string>
    <string name="title_chat">快登</string>
    <string name="title_new">最新發布</string>
    <string name="title_new1">我的接收信息</string>
    <string name="title_myrev">我的回复记录</string>
    <string name="title_job1">選擇分類</string>
    <string name="title_reg">注冊資料</string>
    <string name="title_upinfo">我的資料</string>
    <string name="title_pub">我的發布信息</string>
    <string name="title_pub1">我的發布信息</string>
    <string name="title_belong">所屬行業：</string>
    <string name="self">請選擇您嘅身份</string>
    <string name="cancel">取消</string>
    <string name="personcome">回復者</string>
    <string name="personcomelist">回復者列表</string>
    <string name="personinfo">回復者資料</string>
    <string name="personinfo1">回復資料</string>
    <string name="personinfo3">信息内容</string>
    <string name="personinfo2">回復成功</string>
    <string name="look">查看</string>
    <string name="sureto">我要回復</string>
    <string name="sure">確定</string>
    <string name="selectall">全选</string>
    <string name="selectallcancel">全不选</string>
    <string name="change">修改補充資料</string>
    <string name="sure1">發布</string>
    <string name="radio1">求職者/服務供應商/賣傢/女士</string>
    <string name="radio2">僱主/消費者/發布者/買傢/男士</string>
    <string name="radio3">中介</string>
        <string name="addmain">主页</string>
        <string name="addweixin">微信号</string>
            <string name="addqq">QQ号</string>
            <string name="addqqquent">QQ空间</string>
                <string name="addwhatapp">Whatsapp</string>
                <string name="addmembernum">全员编号</string>
                    <string name="addrule">组别</string>
                        <string name="addmain1">主页:</string>
        <string name="addweixin1">微信号:</string>
            <string name="addqq1">QQ号:</string>
            <string name="addqqquent1">QQ空间:</string>
                <string name="addwhatapp1">Whatsapp:</string>
                    
    <string name="name">姓名</string>
    <string name="name1">姓名:</string>
    <string name="name2">接受</string>
    <string name="name3">不接受</string>
    <string name="name4">聯絡發布者</string>
    <string name="name5">繼續接收回復者信息</string>
    <string name="name6">發布成功</string>
    <string name="name7">取消发布</string>
    <string name="name8">立即聯絡</string>
    <string name="title1">標題:</string>
    <string name="content1">內容:</string>
    <string name="area5">地區:</string>
    <string name="job5">分類:</string>
    <string name="title">標題</string>
    <string name="content">內容</string>
    <string name="tell">電話</string>
        <string name="area2a">地區分區:</string>
        <string name="area2a1">地區分區:</string>
        <string name="area1a">主地區:</string>
    <string name="area1a1">主地區:</string>
    <string name="area3a">小分區:</string>
    
    <string name="tell1">電話:</string>
    <string name="show">自我簡介</string>
    <string name="show4">簡介:</string>
    <string name="item1">請選擇要接收信息分類</string>
    <string name="item2">請選擇要接收信息地區</string>
    <string name="show2">發布簡介</string>
    <string name="show1">回復簡介</string>
    <string name="show3">簡介</string>
    <string name="area">地區</string>
    <string name="titlemy">快登</string>
    <string name="psuccess">發布成功 </string>
    <string name="time">時間</string>
    <string name="psuccess1">回復成功 </string>
    <string name="pnext">下一位</string>
    <string name="area2">地區分區</string>
    <string name="area1">主地區</string>
    <string name="areadd">請選擇要發布地區</string>
    
    <string name="post">手机分类广告</string>
    <string name="area3">小分區</string>
    <string name="job1">主分類</string>
    <string name="job2">次分類</string>
    <string name="job3">小分類</string>
    <string name="toast1">請填寫用戶名</string>
    <string name="toast2">請填寫電話號碼</string>
        <string name="toast2a">請填寫主頁</string>
        <string name="toast2b">請填寫微信號</string>
        <string name="toast2c">請填寫QQ號</string>
        <string name="toast2d">請填寫QQ空間</string>
        <string name="toast2e">請填寫WhatsApp</string>
            
    <string name="toast3">請填寫標題</string>
    <string name="toast4">請填寫內容</string>
    <string name="toast41">請填寫主地區</string>
        <string name="toast42">請填寫地區分區</string>
        <string name="toast43">請填寫小分區</string>
    <string name="toast5">請填寫地區</string>
    <string name="toast6">提交失敗,請重試</string>
    <string name="toast7">發布成功</string>
    <string name="toast8">修改成功</string>
    <string name="toast9">修改失敗</string>
    <string name="toast10">暫無回復者</string>
    <string name="toast11">請檢查網絡</string>
    <string name="toast12">已到達最後</string>
    <string name="toast13">唔该先注册后使用此功能。。。</string>
    <string name="toast14">電話號碼為空</string>
    <string name="toast15">請求有误，重新獲取</string>
    <string name="xlistview_footer_hint_normal"></string>
    <string name="xlistview_footer_hint_normal1">查看更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_last_time">上次更新時間：</string>
    <string name="xlistview_footer_hint_ready"></string>
    <string name="xlistview_footer_hint_ready1">松開載入更多</string>
    <string name="xlistview_header_hint_ready">松開刷新數據</string>
    <string name="xlistview_header_hint_loading">正在加載…</string>

</resources>